Fix iOS auto-zoom on profile section inputs by setting font-size 16px on mobile

--- a/src/pages/DashboardPage/ProfileSection/ProfileSection.module.scss
+++ b/src/pages/DashboardPage/ProfileSection/ProfileSection.module.scss
@@ -480,4 +480,8 @@
   .saveBtn {
     width: 100%;
   }
+
+  .input {
+    font-size: 16px;
+  }
 }
